tests/PhiTest/compile_failure/src/StaticRequire.fail.cpp
#include <phi/test/test_macros.hpp>

TEST_CASE("STATIC_REQUIRE")
{
    STATIC_REQUIRE(false);
}
